tests/snapshots/integration__shell__unclosed_backtick.snap
---
source: tests/shell.rs
expression: stderr
---
Error: unexpected token: eof, expected backtick to close command
   ╭─[unclosed_backtick.tmp:1:13]
   │
 1 │ echo `echo hi
   │      ┬      ┬  
   │      ╰───────── backtick found here
   │             │  
   │             ╰── error happened here
───╯
Error: error parsing input

